HW figma redarc

--- a/HW25.02.2023/style/style.css
+++ b/HW25.02.2023/style/style.css
@@ -861,6 +861,9 @@ Y88b    888   d88""88b 888P"   888 "888 "88b    d88P
     background-size: cover;
     background-repeat: no-repeat;
   }
+  .navigator {
+    display: none;
+  }
 
   .images {
     display: grid;
